<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- La AppBarLayout "pega" el Toolbar arriba -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <!-- Este botón lo pegamos en la esquina superior izquierda -->
        <Button
            android:id="@+id/btnPopupMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:layout_margin="4dp"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- contenido de la activity -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginBottom="32dp"
                android:src="@drawable/mascota"
                android:contentDescription="@string/content_desc_logo"/>

            <!-- Botones -->
            <Button
                android:id="@+id/btnEjecutar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ejecutar"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/btnTrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Entrenamiento"
                android:layout_marginBottom="20dp"/>



            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                android:layout_marginBottom="20dp"
                android:enabled="false"/>

            <Button
                android:id="@+id/btnSalir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_salir"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>